# claude-session-monitor

./: .all-contributorsrc  .gitignore  CONTRIBUTORS.md  LICENSE  README.md  RELEASING.md  TESTING.md  install.ps1  install.sh  package-lock.json  package.json
.github/: BRANCH_STRATEGY.md  RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.jules/: sentinel.md
docs/plans/: 2026-02-18-popover-window-design.md  2026-02-18-popover-window.md
homebrew/: c9watch.rb  claude-session-monitor.rb  update-cask.sh
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_detector.rs  test_parser.rs
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  auth.rs  lib.rs  main.rs  polling.rs  web_server.rs
src-tauri/src/session/: detector.rs  mod.rs  parser.rs  permissions.rs  status.rs
src-tauri/tests/: parser_integration_test.rs  security_tests.rs
src/lib/: README.md  api.ts  index.ts  types.ts  updater.ts  ws.ts
src/lib/components/: ConnectionScreen.svelte  ConversationView.svelte  ExpandedCardOverlay.svelte  MessageBubble.svelte  MessageNavMap.svelte  PromptInput.svelte  QRCodeModal.svelte  SessionCard.svelte  SessionItem.svelte  SessionList.svelte  StatusBar.svelte  ToastNotifications.svelte  ToolCallBlock.svelte  UpdateBanner.svelte  index.ts
src/lib/stores/: sessions.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/popover/: +page.svelte
