[package]
name = "c9watch"
version = "0.2.0"
description = "Monitor and control all your Claude Code sessions from one place"
authors = ["minchenlee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "c9watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = "0.4"

[target."cfg(unix)".dependencies]
libc = "0.2.180"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
